Fix for team info on mobile.
Alternate work banner placement.

--- a/stylesheets/main-responsive.css
+++ b/stylesheets/main-responsive.css
@@ -43,7 +43,7 @@
     .team-info > .valign {
         position:static;
         top:0px;
-        padding-top:10px;
+        padding-top:100px;;
         -webkit-transform: translateY(0%);
         -ms-transform: translateY(-0%);
         transform: translateY(-0%);
@@ -52,28 +52,28 @@
 	    padding: 0 20px;
 	}
     .team-social{
-	    margin-top: 10px;
+	    margin-top: 20px;
 	}
     .team-social > span {
-        padding-top: 10px;
+        padding-top: 2  0px;
     }
 }
 
 /*Notebooks and Small Laptops*/
 @media (max-width: 1152px) {
 
-    
+
 }
 
 /*iPad Landscape Mode and Large Tablets */
 @media (max-width: 1024px) {
 
 	.team-info{
-	    padding: 0 20px;
+	    padding: 0 40px;
 	}
 
 	.team-info > .valign > p {
-				font-size: 0.8em;
+				font-size: 1.2em;
 	}
 
 	.foot-logo {
@@ -591,7 +591,7 @@
 }
 
 
-/*iPhone Landscape Mode and Mediium Smart Phones*/
+/*iPhone Landscape Mode and Medium Smart Phones*/
 @media screen and (max-width: 480px) {
 
 
